--- a/5.버블정렬/5.버블정렬.md
+++ b/5.버블정렬/5.버블정렬.md
@@ -2,7 +2,7 @@
 
 - 서로 인접한 두 원소를 비교하여, 일정한 기준 충족시 서로의 값을 교환하여 정렬하는 알고리즘
 - sinking sort라고도 불린다.
-- 빅오는 O(n^2)로, 성능이 좋지 않은 점이 특징이다.
+- 시간 복잡도 O(n^2)로, 성능이 좋지 않은 점이 특징이다.
 
 ``` javascript
 // 최적화 전
