합병 정렬 정리

--- a/6.선택정렬/6.선택정렬.md
+++ b/6.선택정렬/6.선택정렬.md
@@ -2,7 +2,7 @@
 
 - 버블정렬과 비슷할지도 모르지만, 가장 큰값부터 배치하게 되는 버블 정렬과 달리 작은 값부터 앞으로 보내는 정렬이다.
 
-- 버블 정렬과 마찬가지로 빅오는 O(n^2)이다.
+- 버블 정렬과 마찬가지로 시간복잡도는 O(n^2)이다.
 
 
 ``` javascript
