--- a/10.퀵정렬/10.퀵정렬.md
+++ b/10.퀵정렬/10.퀵정렬.md
@@ -57,7 +57,7 @@ function quickSort(arr, left = 0, right = arr.length - 1) {
 
 const arr = [4, 8, 2, 1, 5, 7, 6, 3];
 
-quickSort(arr);
+quickSort(arr); // [ 1, 2, 3, 4, 5, 6, 7, 8 ]
 
 
 
